# tfm-rl-state-complexity

./: .gitignore  .pre-commit-config.yaml  README.md  metrics.csv  pyproject.toml  requirements.txt  run_index.csv
config/: env.yaml  experiment.yaml  obs_modes.yaml
docs/: 0_resumen.tex  0_titulo.tex  1_introduccion.tex  2_estado_del_arte.tex  3_planificacion_del_proyecto.tex  Ejemplo-TFM.tex  Ejemplo-TFM.toc  TFM-AlejandroSuauRuiz.tex  referencias.bib
envs/: constants.py  simple_pacman.py
experiments/: CHANGELOG.md  dqn_seed0_coins_quadrants_metrics.csv  dqn_seed0_minimal_metrics.csv  eval_summary.csv  metrics.csv  run_index.csv
models/: vecnorm_bool_power_seed0.pkl  vecnorm_bool_power_seed0_a2c.pkl  vecnorm_bool_power_seed0_dqn.pkl  vecnorm_bool_power_seed0_ppo.pkl  vecnorm_bool_power_seed1.pkl  vecnorm_bool_power_seed1_a2c.pkl  vecnorm_bool_power_seed1_dqn.pkl  vecnorm_bool_power_seed1_ppo.pkl  vecnorm_bool_power_seed2.pkl  vecnorm_bool_power_seed2_a2c.pkl  vecnorm_bool_power_seed2_dqn.pkl  vecnorm_bool_power_seed2_ppo.pkl  vecnorm_bool_power_seed3.pkl  vecnorm_coins_quadrants_seed0.pkl  vecnorm_coins_quadrants_seed0_a2c.pkl  vecnorm_coins_quadrants_seed0_dqn.pkl  vecnorm_coins_quadrants_seed0_ppo.pkl  vecnorm_coins_quadrants_seed1.pkl  vecnorm_coins_quadrants_seed1_a2c.pkl  vecnorm_coins_quadrants_seed1_dqn.pkl  vecnorm_coins_quadrants_seed1_ppo.pkl  vecnorm_coins_quadrants_seed2.pkl  vecnorm_coins_quadrants_seed2_a2c.pkl  vecnorm_coins_quadrants_seed2_dqn.pkl  vecnorm_coins_quadrants_seed2_ppo.pkl  vecnorm_coins_quadrants_seed3.pkl  vecnorm_minimal_seed0.pkl  (+25 more)
(+146 files in other folders)
