[tool.poetry]
name = "tfm-rl-state-complexity"
version = "0.1.0"
description = "Experimentos sobre cómo la complejidad del estado afecta al rendimiento en RL usando Pacman y SB3"
authors = ["Tu Nombre <tu.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "rlpacman" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
gymnasium = "^0.29.1"
stable-baselines3 = "^2.2.1"
numpy = "^1.26"
pandas = "^2.1"
matplotlib = "^3.8"
pyyaml = "^6.0"
tensorboard = "^2.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
flake8 = "^6.1"
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.4"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
